[Cosmos] Fix toolbar covering footer icons

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -1985,7 +1985,7 @@ body {
 }
 
 #cosmos-footer-footerContent {
-	padding: 0 20px 40px 20px;
+	padding: 0 20px 10px 20px;
 }
 
 #cosmos-footerContent-footerLinks {
@@ -2126,7 +2126,7 @@ body h6 {
 @toolbar-background-color1: mix(@toolbar-background-color2, @toolbar-background-color-mix, 25%);
 
 #cosmos-toolbar {
-	position: fixed;
+	position: sticky;
 	z-index: 1000;
 	bottom: 0;
 	left: 0;
